force-app/main/default/objects/Visa_Detail__c/Visa_Detail__c.object-meta.xml
<CustomObject>
    <description>All Visa related details of the Pilgrim</description>
    <label>Visa Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visa Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>