force-app/main/default/objects/Visa_Detail__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost of Visa</description>
    <inlineHelpText>What is the exact cost of visa</inlineHelpText>
    <label>Cost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>