force-app/main/default/objects/Visa_Detail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Visa issue date</description>
    <inlineHelpText>Visa issue date.</inlineHelpText>
    <label>Date:</label>
    <required>true</required>
    <type>Date</type>
</CustomField>