force-app/main/default/objects/Visa_Detail__c/fields/Duration_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Stay__c</fullName>
    <description>Duration of stay of the Pilgrim in Saudi Arabia</description>
    <label>Duration of Stay</label>
    <type>TextArea</type>
</CustomField>