force-app/main/default/objects/Visa_Detail__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>