force-app/main/default/objects/Visa_Detail__c/fields/Photo_Match__c.field-meta.xml
<CustomField>
    <fullName>Photo_Match__c</fullName>
    <label>Photo Match</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Not Matched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>