force-app/main/default/objects/Visa_Detail__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Umrah Visa</fullName>
            </value>
            <value>
                <fullName>Hajj Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>