force-app/main/default/objects/Visa_Detail__c/validationRules/Auth.validationRule-meta.xml
<ValidationRule>
    <fullName>Auth</fullName>
    <active>true</active>
    <description>NOT( REGEX(  Passport__c  ,&quot;^[ A-Z 0-9]*$&quot;) )</description>
    <errorConditionFormula>NOT( REGEX( Passport__c ,&quot;^[A-Z 0-9]*$&quot;) )</errorConditionFormula>
    <errorMessage>Start Alphabet</errorMessage>
</ValidationRule>