force-app/main/default/objects/Visa_Detail__c/listViews/First_Visa_Detail.listView-meta.xml
<ListView>
    <fullName>First_Visa_Detail</fullName>
    <filterScope>Queue</filterScope>
    <label>First</label>
    <queue>First</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>